--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,5 +14,19 @@
         tools:context=".MainActivity"
         />
 
-
+        <!--Below is working code for adding the FAB button over-->
+        <!--Recycler View layout, but not sure if its correct-->
+        <!--<ImageButton-->
+        <!--android:id="@+id/button_floating_action"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:src="@drawable/ic_add_white_24dp"-->
+        <!--android:background="@null"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_marginBottom="12dp"-->
+        <!--android:layout_marginEnd="12dp"-->
+        <!--android:layout_marginRight="12dp"-->
+        <!--android:elevation="2dp"/>-->
 </RelativeLayout>
