--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -10,7 +10,7 @@
         android:id="@+id/item_icon"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="1dp"
@@ -23,11 +23,23 @@
         android:id="@+id/item_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/item_icon"
+        android:layout_toEndOf="@id/item_icon"
         android:layout_alignBaseline="@+id/item_icon"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:textSize="22sp"
+        android:layout_centerVertical="true"
+        />
+
+    <!-- checkbox for first position -->
+    <CheckBox
+        android:id="@+id/item_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/item_icon"
+        android:layout_alignEnd="@id/item_title"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_centerVertical="true"
         />
 
