--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,8 @@
 <resources>
 <!-- inherit from the material theme -->
 <style name="AppTheme" parent="android:Theme.Material">
+    <item name="android:windowActionBar">false</item>
+    <item name="android:windowNoTitle">true</item>
     <!-- Main theme colors -->
     <!--   your app branding color for the app bar -->
     <item name="android:colorPrimary">@color/lockd_bluegrey</item>
