Fixed Toolbar error
Was receiving an illegal state exception due to toolbar and actionbar
discrepancy. To fix, I removed the android:windowActionBar>false<
inside the styles xml and added windowActionBar>false<, a more L
friendly declaration to remove the action bar. Next I set the gradle
target version to 21 and the minimum version to 17.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="?android:attr/colorPrimary"
+        android:background="@color/lockd_bluegrey"
         />
 
     <android.support.v7.widget.RecyclerView
