--- a/app/src/main/res/layout/activity_create_lock.xml
+++ b/app/src/main/res/layout/activity_create_lock.xml
@@ -7,4 +7,12 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="io.wallfly.lockdapp.CreateLockActivity">
 
+    <ImageButton
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:id="@+id/imageButton"
+        android:layout_alignParentBottom="true"
+        android:elevation="5dp"
+        android:layout_alignParentEnd="true"
+        android:onClick="saveLock" />
 </RelativeLayout>
