--- a/app/src/main/res/layout/activity_create_lock.xml
+++ b/app/src/main/res/layout/activity_create_lock.xml
@@ -1,10 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
     android:id="@+id/lockLayout"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="io.wallfly.lockdapp.CreateLockActivity">
 
     <ImageButton
@@ -14,5 +11,7 @@
         android:layout_alignParentBottom="true"
         android:elevation="5dp"
         android:layout_alignParentEnd="true"
-        android:onClick="saveLock" />
+        android:onClick="saveLock"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp" />
 </RelativeLayout>
