--- a/app/src/main/res/layout/activity_create_lock.xml
+++ b/app/src/main/res/layout/activity_create_lock.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentBottom="true"
         android:elevation="5dp"
         android:layout_alignParentEnd="true"
-        android:onClick="saveLock"
+        android:onClick="saveLockOnClick"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp" />
 </RelativeLayout>
