--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:id="@+id/overlay"
         android:layout_width="match_parent"
         android:layout_height="@dimen/flexible_space_image_height"
-        android:background="@color/lockd_primary" />
+        android:background="@color/lockd_primary"/>
 
     <View
         android:id="@+id/list_background"
@@ -34,10 +34,12 @@
         android:layout_width="match_parent"
         android:scrollbars="vertical" />
 
+
     <include layout="@layout/toolbar"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent"/>
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:elevation="5dp"
         android:layout_height="wrap_content"
@@ -114,7 +116,10 @@
         android:padding="20dp"
         android:clickable="true"
         android:visibility="invisible"
+        android:transitionName="@string/float_action_button"
         android:background="@drawable/ripple_teal_circle"
         android:src="@drawable/pencil_white_icon" />
+
+
 
 </RelativeLayout>
